# retreival-free-context-compressor

./: .dependabot.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .releaserc.js  .releaserc.json  .secrets.baseline  .trivyignore  ACADEMIC_PUBLICATION_PACKAGE.md  ARCHITECTURE.md  AUTONOMOUS_SDLC_COMPLETE_FINAL.json  AUTONOMOUS_SDLC_EXECUTION_COMPLETE.md  AUTONOMOUS_SDLC_GENERATION_10_FINAL_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_COMPLETE.md  BACKLOG.md  CHANGELOG.md  CHECKPOINTED_SDLC_COMPLETE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  FINAL_ENHANCEMENT_SUMMARY.md  GENERATION_2_ROBUST_FEATURES_SUMMARY.md  GENERATION_3_SCALING_SUMMARY.md  GENERATION_4_RESEARCH_COMPLETE.md  GENERATION_4_RESEARCH_PUBLICATION_MATERIALS.md  GENERATION_5_REVOLUTIONARY_COMPLETE.md  GENERATION_6_AUTONOMOUS_EXECUTION_REPORT.md  GENERATION_7_AUTONOMOUS_SDLC_FINAL_REPORT.md  GENERATION_7_RESEARCH_PUBLICATION_PACKAGE.md  GENERATION_8_AUTONOMOUS_SDLC_FINAL_REPORT.md  GENERATION_9_AUTONOMOUS_SDLC_FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  (+77 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  performance_issue.yml
.terragon/: value-config.yaml  value-metrics.json
benchmark_results/: benchmark_results_20250804_134916.json
benchmarks/: __init__.py  benchmark_runner.py  compression_benchmark.py
deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  Dockerfile  deployment_summary.json  requirements.txt
deployment/docker/: docker-compose.yml
deployment/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
deployment/monitoring/: compression_alerts.yml
deployment/monitoring/grafana/: compression_dashboard.json
deployment/monitoring/prometheus/: prometheus.yml
deployment/scripts/: deploy.sh  rollback.sh  scale.sh
deployment/security/: network-policy.yaml  pod-security-policy.yaml  rbac.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ROADMAP.md
docs/adr/: 0001-compression-architecture.md  0002-observability-framework.md  0003-testing-strategy.md  README.md  adr-001-compression-architecture.md  template.md
docs/api/: documentation-requirements.md
docs/deployment/: docker-guide.md
docs/monitoring/: monitoring-guide.md
docs/performance/: benchmarking-framework.md
docs/research/: ADVANCED_COMPRESSION_RESEARCH.md  BENCHMARKING_FRAMEWORK.md  PUBLICATION_MATERIALS.md
docs/security/: guidelines.md  slsa-compliance.md  supply-chain-security.md
docs/testing/: testing-guide.md
docs/workflows/: GITHUB_ACTIONS_REQUIRED.md  IMPLEMENTATION_REQUIRED.md  READY_FOR_DEPLOYMENT.md  SETUP_REQUIRED.md  WORKFLOW_GUIDE.md  advanced-security.md  ci.md  release-workflow.md  required-workflows.md
docs/workflows/implementations/: ci.yml  dependency-review.yml  docker.yml  monitoring.yml  performance.yml  release.yml  security.yml  slsa.yml
examples/: generation_3_scaling_demo.py  research_demonstration.py
monitoring/: docker-compose.monitoring.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/loki/: loki.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: retrieval-free-alerts.yml
monitoring/promtail/: promtail.yml
optimization/: algorithms.py  caching.py  performance_config.py
scripts/: benchmark_compression.py  build.sh  health_check.py  post_release.py  profile.py  profile_memory.py  release.py  security_scan.py  setup-dev.sh  update_version.py
scripts/metrics/: collect_metrics.py
scripts/security/: generate-enhanced-sbom.sh  generate-sbom.sh
src/retrieval_free/: __init__.py  adaptive_compression.py  async_api.py  caching.py  cli.py  compliance.py  configuration.py  core.py  distributed_cache.py  enterprise_integration.py  error_handling.py  evaluation.py  exceptions.py  generation_10_autonomous_breakthrough.py  generation_4_research_framework.py  generation_5_breakthroughs.py  generation_6_advanced_testing.py  generation_6_causal_compression.py  generation_6_edge_optimization.py  generation_6_federated_learning.py  generation_6_neural_architecture_search.py  generation_6_neuromorphic_breakthrough.py  generation_6_quantum_breakthrough.py  generation_6_security_framework.py  generation_7_autonomous_breakthrough.py  generation_8_autonomous_enhancement.py  generation_9_infinite_context_breakthrough.py  i18n.py  mock_torch.py  monitoring.py  monitoring_enhanced.py  multi_doc.py  multi_region.py  observability.py  optimization.py  performance_monitor.py  performance_optimization.py  platform.py  plugins.py  quality_assurance.py  (+13 more)
src/retrieval_free/core/: __init__.py  auto_compressor.py  base.py  context_compressor.py
src/retrieval_free/locales/: en.json  es.json  fr.json
src/rfcc/: __init__.py  compressor.py  encoder.py  reasoner.py
tests/: conftest.py  run_integration_tests.py  test_basic.py  test_compression_core.py  test_compressor.py  test_examples.py  test_integration.py  test_performance.py  test_reasoner.py  test_security.py
tests/fixtures/: test_data.py
tests/integration/: __init__.py  test_end_to_end.py
tests/performance/: __init__.py  test_benchmarks.py
tests/property/: __init__.py  test_hypothesis.py
tests/unit/: test_compression.py  test_compression_core.py
